# rag-finder

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml  result.json
app/: main.py
app/controller/: chat_controller.py
app/pages/: chat.py  data_table.py
data/: Fantastic Beasts and Where to Find Them.xlsx  Fantastic_Beasts_and_Where_to_Find_Them.json
docs/: README.md
notebooks/: create_vector_store.ipynb
src/core/: __init__.py  search.py
src/knowledgbase/: developers_programmers_jobposting_corpus_skill.json  jobposting_base.py  testmodel.py  testmodel2.py
src/rag/: __init__.py  augmented.py  generation.py  pipeline.py  retrieval.py  vector_store.py
src/rag/faiss_index/: index.faiss  index.pkl
