[project]
name = "rag-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.5.2",
    "fastapi>=0.115.11",
    "scikit-learn>=1.6.1",
    "streamlit>=1.43.0",
    "torch>=2.6.0",
    "transformers>=4.50.1",
]
