[project]
name = "rag-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.11",
    "flagembedding>=1.3.4",
    "langchain-community>=0.3.20",
    "langchain-huggingface>=0.1.2",
    "scikit-learn>=1.6.1",
    "streamlit>=1.43.0",
]
